--- a/McElhenney-Assign02.ipynb
+++ b/McElhenney-Assign02.ipynb
@@ -43,11 +43,49 @@
    "source": [
     "### 3. Accuracy Metrics\n",
     "\n",
-    "* _Precision_ \n",
+    "\n",
+    "#### Confusion Matrix Metrics\n",
+    "There are four definable metrics other than accuracy that come from the confusion matrix.\n",
+    "* _Precision_ - Precision is the ratio of true positives to the sum of all positives. This tells us/the algo how many classifications where correctly identified in one category, as opposed to accuracy which tells us how many of all classifications were made to correct categories. You could also due the exact opposite of this with the negatives.\n",
+    "\n",
+    "$$\\text{Precision} = \\frac{\\text{True Positives}}{\\text{True Positives} + \\text{False Positives}}$$\n",
+    "\n",
+    "* _Recall or Sensitivity_ - Recall is the measure of true positives to all positives (true positives + false negatives). This metric tells us the proportion of hits to possible hits or how well the model identifies positives.\n",
+    "\n",
+    "$$\\text{Recall} = \\frac{\\text{True Positives}}{\\text{True Positives} + \\text{False Negatives}}$$\n",
+    "\n",
+    "* _Specificity_ - Specificity is the exact opposite of Sensitivity. That is to say it is the measure of true negatives to  all negatives, which tells us how correctly the model identifies negatives.\n",
+    "\n",
+    "$$\\text{Specificity} = \\frac{\\text{True Negatives}}{\\text{True Negatives} + \\text{False Positives}}$$\n",
+    "\n",
+    "* _F1 Score_ - The F1 Score is a combination of Precision and Recall using the Harmonic Mean of the two. This prevents a false sense of accomplishment when the model has a high recall but low precision (good true positives w/ bad false positives).\n",
+    "\n",
+    "$$\\text{F1} = \\frac{2 * \\text{Recall} * \\text{Sensitivity}}{\\text{Recall} + \\text{Sensitivity}}$$\n",
+    "\n",
+    "#### Other Metrics\n",
+    "\n",
+    "These metrics tend to work with values produced by a model rather than the absolute correctness of the model (no confusion matrix).\n",
+    "\n",
+    "* _Logarithmic Loss_ - Log Loss penalizes false classifications and is especially useful for classifications on multiple classes (that is not just positive or negative, as in the Confusion Matrix Metrics). This metric takes the negative log of the likelihood that the model predicts the outcome that is observed in the data with a lower log loss leading to greater chance the model predicts the outcome correctly.\n",
+    "\n",
+    "$$\\text{Log Loss} = \\frac{-1}{N} \\sum_{i=1}^{N} \\sum_{j=1}^{M} y_{ij} * log(p_{ij})$$\n",
+    "\n",
+    "* _Mean Absolute Error_ - Mean Absolute Error is simply the mean of the difference of all observed values to all predicted values. As predicted values get closer to observed values this metric approaches zero. \n",
+    "\n",
+    "$$\\text{Mean Absolute Error} = \\frac{1}{N} \\sum_{j=1}^{N} |predicted - observed|$$\n",
+    "\n",
+    "* _Mean Squared Error_ - MSE is similar to Mean Absolute Error, but instead averages the square of the difference between predicted and observed.\n",
+    "\n",
+    "$$\\text{Mean Squared Error} = \\frac{1}{N} \\sum_{j=1}^{N} (predicted - observed)^2$$\n",
     "\n",
     "\n",
-    "References:\n",
-    "[1] https://medium.com/@MohammedS/performance-metrics-for-classification-problems-in-machine-learning-part-i-b085d432082b"
+    "__References:__\n",
+    "\n",
+    "[1] https://medium.com/@MohammedS/performance-metrics-for-classification-problems-in-machine-learning-part-i-b085d432082b\n",
+    "\n",
+    "[2] https://towardsdatascience.com/metrics-to-evaluate-your-machine-learning-algorithm-f10ba6e38234\n",
+    "\n",
+    "[3] https://www.kaggle.com/dansbecker/what-is-log-loss"
    ]
   },
   {
@@ -197,7 +235,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
