--- a/McElhenney-Assign02.ipynb
+++ b/McElhenney-Assign02.ipynb
@@ -34,7 +34,7 @@
     "* *Image* - Image data should be represented as multidimensional arrays of numericals. The dimensions of the text would correspond to different RGB values necessary to represent the pixel of the image. If the image is black-and-white we can just use a unidimentional array to represent the intensity of each pixel of the image.\n",
     "\n",
     "\n",
-    "* *Dependent Variable* - "
+    "* *Dependent Variable* - The dependent variable or target may be any of the above feature types. Any dataset with labeled categories (supervised learning datasets) will feature this (\"Class\" in the Iris dataset or \"Chance to Admit\" in the Graduate Admissions dataset)."
    ]
   },
   {
@@ -96,7 +96,14 @@
     "\n",
     "I tried using df.equals() to check the equality between the original dataframes corr() and the correlation i made, but that seems to not work despite the dataframes looking the same. My guess is this is some rounding difference. \n",
     "\n",
-    "This cell will first output my correlation dataframe and then pandas's correlation dataframe for easy comparison."
+    "The code cell will first output my correlation dataframe and then pandas's correlation dataframe for easy comparison (it's 1:1).\n",
+    "\n",
+    "#### Questions\n",
+    "* The diagonals of the matrix is all one's because is it is calculating the correlation of a feature to itself (which it must correlate to exactly as the values are the same). \n",
+    "\n",
+    "* I found it interesting to note that research has very low correlation with the rest of the values as it seems to me a student with research experience would be more likely to want to get into grad. school, and would thus score better on better correlating metrics such as the GRE (though I could see research lowering CGPA which would may cause an issue for admissions).\n",
+    "\n",
+    "* Based on the information available CGPA is the greatest predictor of admission to grad school followed by GRE. This seems valid as a student who applies themselves well before grad. school is probably more likely to apply themselves well in both grad. school and on the GRE."
    ]
   },
   {
