Gonna turn it in

--- a/McElhenney-Assign02.ipynb
+++ b/McElhenney-Assign02.ipynb
@@ -4,20 +4,66 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1. Compare and Contrast Classifiers \n",
+    "## 1. Compare and Contrast Classifiers \n",
     "\n",
-    "* *Preceptrons*\n",
-    "    A preceptron is a rudimentary artificial neuron with an associated learning rule to allow it to automatically find optimal weights for the learning coefficients. This allows for the categorization of input data based on binary output.\n",
-    "* *SVMs*\n",
-    "* *Decision Trees*\n",
-    "* *Random Forests*"
+    "### *Preceptrons*\n",
+    "Preceptrons are a rudimentary implementation of artificial neurons with a learning rule for the automatic learning of weight coefficients.\n",
+    "\n",
+    "* Function - Used for classification. Creates linear separations in data through the summation of datapoints and subsequent adjustment of coefficient multipliers to the datapoints.\n",
+    "\n",
+    "* Data type - Can only be used if the data is linearally separable, but can be used with any datatype in which that is possible (text, images, or numerical).\n",
+    "\n",
+    "* Best Use Case - (?) With the proliferation of machine learning techniques I don't think these are ever really useful in practice, but they are a good introduction to ANNs.\n",
+    " \n",
+    "    \n",
+    "### *SVMs*\n",
+    "\n",
+    "SVMs create hyperplanes to classify data in to appropriate bins. \n",
+    "\n",
+    "* Function - Used for classification. Optimizes the placement of hyperplanes to accurately separate classes of input.\n",
+    "\n",
+    "* Data type - SVMs are very good at linearly separable data, such as images (MNIST), text (sentiment), and even protein classification.\n",
+    "\n",
+    "* Best Use Case - Work best when the data has good distance between the data points, however interpretations exist that allow for \"bendy\" hyperplanes to work around closely related data.\n",
+    "\n",
+    "### *Decision Trees*\n",
+    "\n",
+    "Decision Trees area supervised learning model that attempts to create binary trees and filter the data into categories with each branch representing a decision based on a single feature (like flow charts). \n",
+    "\n",
+    "* Function - Good for classification and regression. Breaks the data into smaller and smaller branches of classes or probabilities.\n",
+    "\n",
+    "* Data type - For use with multi-dimensional data, but could be used with uni-dimensional data. Works well with probabilitic data such as in predicting the most probable best response in chatbots. Can also be used with image data.\n",
+    "\n",
+    "* Best Use Case - Works best when all the data features easily fall into easily (non-lazy human) separable categories. Decisions Trees often overfit, so we need to be aware of that possibility (can be solved through the use of Random Forests).\n",
+    "\n",
+    "### *Random Forests*\n",
+    "\n",
+    "Random Forest algorithms create a collection of Decision Trees which produce classifications collectively (the classification with the most \"votes\" wins).\n",
+    "\n",
+    "* Function - Classification and regression. The classification can be thought of as the mode of the classifications produced by the ensemble, and regression can be the mean of the probabilites produced by the ensemble.\n",
+    "\n",
+    "* Data type - Same as Decision Trees.\n",
+    "\n",
+    "* Best Use Case - Random forests are good when we observe overfitting from a singular Decision Tree, so long as we take steps ensure diversity amoung the ensemble (which can be accomplished by simply dividing the training set differently for each of the trees).\n",
+    "\n",
+    "__References:__\n",
+    "\n",
+    "[1] Wikipedia for each\n",
+    "\n",
+    "[2] Raschka, Sebastian, and Vahid Mirjalili. Python Machine Learning : Machine Learning and Deep Learning with Python, Scikit-learn, and Tensorflow 2, 3rd Edition. 3rd ed. Birmingham: Packt Publishing, Limited, 2019.\n",
+    "\n",
+    "[3] https://towardsdatascience.com/understanding-random-forest-58381e0602d2\n",
+    "\n",
+    "[4] https://towardsdatascience.com/the-complete-guide-to-decision-trees-28a4e3c7be14\n",
+    "\n",
+    "[5] https://towardsdatascience.com/perceptron-learning-algorithm-d5db0deab975"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2. Define Feature Types\n",
+    "## 2. Define Feature Types\n",
     "\n",
     "* *Numerical* - Numerical data can be represented as any numerical datatype like integers, floats, or doubles.The Iris dataset from scikit-learn/UCI (https://archive.ics.uci.edu/ml/datasets/iris) features 4 float-type numerical features: sepal length, sepal width, petal length, and petal width.\n",
     "\n",
@@ -41,10 +87,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3. Accuracy Metrics\n",
+    "## 3. Accuracy Metrics\n",
     "\n",
     "\n",
-    "#### Confusion Matrix Metrics\n",
+    "### Confusion Matrix Metrics\n",
     "There are four definable metrics other than accuracy that come from the confusion matrix.\n",
     "* _Precision_ - Precision is the ratio of true positives to the sum of all positives. This tells us/the algo how many classifications where correctly identified in one category, as opposed to accuracy which tells us how many of all classifications were made to correct categories. You could also due the exact opposite of this with the negatives.\n",
     "\n",
@@ -62,7 +108,7 @@
     "\n",
     "$$\\text{F1} = \\frac{2 * \\text{Recall} * \\text{Sensitivity}}{\\text{Recall} + \\text{Sensitivity}}$$\n",
     "\n",
-    "#### Other Metrics\n",
+    "### Other Metrics\n",
     "\n",
     "These metrics tend to work with values produced by a model rather than the absolute correctness of the model (no confusion matrix).\n",
     "\n",
@@ -92,13 +138,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4. Correlation in Admission Prediction Data\n",
+    "## 4. Correlation in Admission Prediction Data\n",
     "\n",
     "I tried using df.equals() to check the equality between the original dataframes corr() and the correlation i made, but that seems to not work despite the dataframes looking the same. My guess is this is some rounding difference. \n",
     "\n",
     "The code cell will first output my correlation dataframe and then pandas's correlation dataframe for easy comparison (it's 1:1).\n",
     "\n",
-    "#### Questions\n",
+    "### Questions\n",
     "* The diagonals of the matrix is all one's because is it is calculating the correlation of a feature to itself (which it must correlate to exactly as the values are the same). \n",
     "\n",
     "* I found it interesting to note that research has very low correlation with the rest of the values as it seems to me a student with research experience would be more likely to want to get into grad. school, and would thus score better on better correlating metrics such as the GRE (though I could see research lowering CGPA which would may cause an issue for admissions).\n",
@@ -108,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -217,13 +263,6 @@
     "print(f\"Pandas's correlation:\\n{df.corr()}\")\n",
     "  "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
