Let's run more experiments but for now this works.

--- a/McElhenney-Assign05.ipynb
+++ b/McElhenney-Assign05.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Preprocess Data"
+    "## Load Modules/Data and Show Initial Tables"
    ]
   },
   {
@@ -598,6 +598,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Cleanup Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Drop non-essential and sparse data features\n",
+    "\n",
+    "I had some duplicate checking here earlier, but I removed it because there don't appear to be duplicates in the data. That could be from clerical errors, but my results are pretty good."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -1025,25 +1041,6 @@
     }
    ],
    "source": [
-    "# Drop columns from both training and testing sets\n",
-    "\n",
-    "# Check for and remove duplicates first\n",
-    "# Adapted from module 3 notebook\n",
-    "def dup_check(df):\n",
-    "    df['duplicate'] = df.duplicated()\n",
-    "\n",
-    "    if len(df[df['duplicate'] == True]) > 0:\n",
-    "        print(df[df['duplicate'] == True])\n",
-    "\n",
-    "        dups = df[df['duplicate'] == True].index\n",
-    "        df.drop(dups, inplace=True)\n",
-    "\n",
-    "    df.drop(columns='duplicate', inplace=True)\n",
-    "    \n",
-    "dup_check(train)\n",
-    "dup_check(test)\n",
-    "dup_check(test_tar)\n",
-    "\n",
     "# Name and ID are just useless identifiers.\n",
     "# Ticket and Cabin might be useful if there was a correlation with cabin position and \n",
     "# survivability but they're pretty sparse.\n",
@@ -1418,12 +1415,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Discretize data\n",
+    "\n",
+    "Only thing that needs to be discretized after dropping columns is 'Sex'"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Discritize Sex\n",
+    "discretize = ['Sex']\n",
     "\n",
     "# Taken from module 3 notebook\n",
     "def encode_onehot(_df, f):\n",
@@ -1432,8 +1438,16 @@
     "    df3 = df3.drop([f], axis=1)\n",
     "    return df3\n",
     "\n",
-    "train = encode_onehot(train, 'Sex')\n",
-    "test = encode_onehot(test, 'Sex')"
+    "for dis in discretize:\n",
+    "    train = encode_onehot(train, dis)\n",
+    "    test = encode_onehot(test, dis)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Impute missing values with k-Nearest Neighbors Imputer"
    ]
   },
   {
@@ -1909,297 +1923,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Survived</th>\n",
-       "      <th>Pclass</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>SibSp</th>\n",
-       "      <th>Parch</th>\n",
-       "      <th>Fare</th>\n",
-       "      <th>Sex - female</th>\n",
-       "      <th>Sex - male</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Survived</th>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>-0.338481</td>\n",
-       "      <td>-0.077221</td>\n",
-       "      <td>-0.035322</td>\n",
-       "      <td>0.081629</td>\n",
-       "      <td>0.257307</td>\n",
-       "      <td>0.543351</td>\n",
-       "      <td>-0.543351</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Pclass</th>\n",
-       "      <td>-0.338481</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>-0.369226</td>\n",
-       "      <td>0.083081</td>\n",
-       "      <td>0.018443</td>\n",
-       "      <td>-0.549500</td>\n",
-       "      <td>-0.131900</td>\n",
-       "      <td>0.131900</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Age</th>\n",
-       "      <td>-0.077221</td>\n",
-       "      <td>-0.369226</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>-0.308247</td>\n",
-       "      <td>-0.189119</td>\n",
-       "      <td>0.096067</td>\n",
-       "      <td>-0.093254</td>\n",
-       "      <td>0.093254</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>SibSp</th>\n",
-       "      <td>-0.035322</td>\n",
-       "      <td>0.083081</td>\n",
-       "      <td>-0.308247</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.414838</td>\n",
-       "      <td>0.159651</td>\n",
-       "      <td>0.114631</td>\n",
-       "      <td>-0.114631</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Parch</th>\n",
-       "      <td>0.081629</td>\n",
-       "      <td>0.018443</td>\n",
-       "      <td>-0.189119</td>\n",
-       "      <td>0.414838</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.216225</td>\n",
-       "      <td>0.245489</td>\n",
-       "      <td>-0.245489</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Fare</th>\n",
-       "      <td>0.257307</td>\n",
-       "      <td>-0.549500</td>\n",
-       "      <td>0.096067</td>\n",
-       "      <td>0.159651</td>\n",
-       "      <td>0.216225</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.182333</td>\n",
-       "      <td>-0.182333</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Sex - female</th>\n",
-       "      <td>0.543351</td>\n",
-       "      <td>-0.131900</td>\n",
-       "      <td>-0.093254</td>\n",
-       "      <td>0.114631</td>\n",
-       "      <td>0.245489</td>\n",
-       "      <td>0.182333</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>-1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Sex - male</th>\n",
-       "      <td>-0.543351</td>\n",
-       "      <td>0.131900</td>\n",
-       "      <td>0.093254</td>\n",
-       "      <td>-0.114631</td>\n",
-       "      <td>-0.245489</td>\n",
-       "      <td>-0.182333</td>\n",
-       "      <td>-1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "              Survived    Pclass       Age     SibSp     Parch      Fare  \\\n",
-       "Survived      1.000000 -0.338481 -0.077221 -0.035322  0.081629  0.257307   \n",
-       "Pclass       -0.338481  1.000000 -0.369226  0.083081  0.018443 -0.549500   \n",
-       "Age          -0.077221 -0.369226  1.000000 -0.308247 -0.189119  0.096067   \n",
-       "SibSp        -0.035322  0.083081 -0.308247  1.000000  0.414838  0.159651   \n",
-       "Parch         0.081629  0.018443 -0.189119  0.414838  1.000000  0.216225   \n",
-       "Fare          0.257307 -0.549500  0.096067  0.159651  0.216225  1.000000   \n",
-       "Sex - female  0.543351 -0.131900 -0.093254  0.114631  0.245489  0.182333   \n",
-       "Sex - male   -0.543351  0.131900  0.093254 -0.114631 -0.245489 -0.182333   \n",
-       "\n",
-       "              Sex - female  Sex - male  \n",
-       "Survived          0.543351   -0.543351  \n",
-       "Pclass           -0.131900    0.131900  \n",
-       "Age              -0.093254    0.093254  \n",
-       "SibSp             0.114631   -0.114631  \n",
-       "Parch             0.245489   -0.245489  \n",
-       "Fare              0.182333   -0.182333  \n",
-       "Sex - female      1.000000   -1.000000  \n",
-       "Sex - male       -1.000000    1.000000  "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Pclass</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>SibSp</th>\n",
-       "      <th>Parch</th>\n",
-       "      <th>Fare</th>\n",
-       "      <th>Sex - female</th>\n",
-       "      <th>Sex - male</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Pclass</th>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>-0.492143</td>\n",
-       "      <td>0.001087</td>\n",
-       "      <td>0.018721</td>\n",
-       "      <td>-0.577147</td>\n",
-       "      <td>-0.108615</td>\n",
-       "      <td>0.108615</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Age</th>\n",
-       "      <td>-0.492143</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>-0.091587</td>\n",
-       "      <td>-0.061249</td>\n",
-       "      <td>0.337932</td>\n",
-       "      <td>-0.000013</td>\n",
-       "      <td>0.000013</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>SibSp</th>\n",
-       "      <td>0.001087</td>\n",
-       "      <td>-0.091587</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.306895</td>\n",
-       "      <td>0.171539</td>\n",
-       "      <td>0.099943</td>\n",
-       "      <td>-0.099943</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Parch</th>\n",
-       "      <td>0.018721</td>\n",
-       "      <td>-0.061249</td>\n",
-       "      <td>0.306895</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.230046</td>\n",
-       "      <td>0.159120</td>\n",
-       "      <td>-0.159120</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Fare</th>\n",
-       "      <td>-0.577147</td>\n",
-       "      <td>0.337932</td>\n",
-       "      <td>0.171539</td>\n",
-       "      <td>0.230046</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.191514</td>\n",
-       "      <td>-0.191514</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Sex - female</th>\n",
-       "      <td>-0.108615</td>\n",
-       "      <td>-0.000013</td>\n",
-       "      <td>0.099943</td>\n",
-       "      <td>0.159120</td>\n",
-       "      <td>0.191514</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>-1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Sex - male</th>\n",
-       "      <td>0.108615</td>\n",
-       "      <td>0.000013</td>\n",
-       "      <td>-0.099943</td>\n",
-       "      <td>-0.159120</td>\n",
-       "      <td>-0.191514</td>\n",
-       "      <td>-1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                Pclass       Age     SibSp     Parch      Fare  Sex - female  \\\n",
-       "Pclass        1.000000 -0.492143  0.001087  0.018721 -0.577147     -0.108615   \n",
-       "Age          -0.492143  1.000000 -0.091587 -0.061249  0.337932     -0.000013   \n",
-       "SibSp         0.001087 -0.091587  1.000000  0.306895  0.171539      0.099943   \n",
-       "Parch         0.018721 -0.061249  0.306895  1.000000  0.230046      0.159120   \n",
-       "Fare         -0.577147  0.337932  0.171539  0.230046  1.000000      0.191514   \n",
-       "Sex - female -0.108615 -0.000013  0.099943  0.159120  0.191514      1.000000   \n",
-       "Sex - male    0.108615  0.000013 -0.099943 -0.159120 -0.191514     -1.000000   \n",
-       "\n",
-       "              Sex - male  \n",
-       "Pclass          0.108615  \n",
-       "Age             0.000013  \n",
-       "SibSp          -0.099943  \n",
-       "Parch          -0.159120  \n",
-       "Fare           -0.191514  \n",
-       "Sex - female   -1.000000  \n",
-       "Sex - male      1.000000  "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
    "source": [
-    "# Let's peek the correlations\n",
-    "display(train.corr())\n",
-    "display(test.corr())"
+    "## Construct and Run Pipeline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -2220,7 +1952,6 @@
     "y_test = test_tar.loc[:, test_tar.columns == 'Survived'].values.ravel()\n",
     "\n",
     "# Model Declaration\n",
-    "#model = RandomForestClassifier(n_estimators=1000)\n",
     "model = GaussianNB()\n",
     "\n",
     "# Construct Pipeline and Train/Test\n",
@@ -2245,6 +1976,49 @@
     "\n",
     "![image.png](attachment:image.png)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Export for Kaggle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df_test_org' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-e949dfd8a02a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m             \u001b[0mwriter\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwriterow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpassengerId\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0msave_preds\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'predictions_erhan.csv'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdf_test_org\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'df_test_org' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "def save_preds(_fn, _y_pred, _df):\n",
+    "    import csv\n",
+    "    with open(_fn, 'w') as fout:\n",
+    "        writer = csv.writer(fout, delimiter=',', lineterminator='\\n')\n",
+    "        writer.writerow(['Survived', 'PassengerId'])\n",
+    "        for y, passengerId in zip(_y_pred, _df['PassengerId']):\n",
+    "            writer.writerow([y, passengerId])\n",
+    "\n",
+    "save_preds('predictions_mcelhenney.csv', y_pred, df_test_org)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
