Working for now

--- a/McElhenney-Assign05.ipynb
+++ b/McElhenney-Assign05.ipynb
@@ -1986,21 +1986,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'df_test_org' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-9-e949dfd8a02a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m             \u001b[0mwriter\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwriterow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpassengerId\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0msave_preds\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'predictions_erhan.csv'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdf_test_org\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'df_test_org' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def save_preds(_fn, _y_pred, _df):\n",
     "    import csv\n",
@@ -2010,7 +1998,7 @@
     "        for y, passengerId in zip(_y_pred, _df['PassengerId']):\n",
     "            writer.writerow([y, passengerId])\n",
     "\n",
-    "save_preds('predictions_mcelhenney.csv', y_pred, df_test_org)"
+    "save_preds('predictions_mcelhenney.csv', y_pred, test_tar)"
    ]
   },
   {
