--- a/McElhenney-Assign06.ipynb
+++ b/McElhenney-Assign06.ipynb
@@ -311,9 +311,264 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country</th>\n",
+       "      <th>year</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>age</th>\n",
+       "      <th>suicides_no</th>\n",
+       "      <th>population</th>\n",
+       "      <th>suicides/100k pop</th>\n",
+       "      <th>country-year</th>\n",
+       "      <th>HDI for year</th>\n",
+       "      <th>gdp_for_year ($)</th>\n",
+       "      <th>gdp_per_capita ($)</th>\n",
+       "      <th>generation</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Albania</td>\n",
+       "      <td>1987</td>\n",
+       "      <td>1</td>\n",
+       "      <td>20</td>\n",
+       "      <td>21</td>\n",
+       "      <td>312900</td>\n",
+       "      <td>6.71</td>\n",
+       "      <td>Albania1987</td>\n",
+       "      <td>0.776601</td>\n",
+       "      <td>2156624900</td>\n",
+       "      <td>796</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Albania</td>\n",
+       "      <td>1987</td>\n",
+       "      <td>1</td>\n",
+       "      <td>45</td>\n",
+       "      <td>16</td>\n",
+       "      <td>308000</td>\n",
+       "      <td>5.19</td>\n",
+       "      <td>Albania1987</td>\n",
+       "      <td>0.776601</td>\n",
+       "      <td>2156624900</td>\n",
+       "      <td>796</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Albania</td>\n",
+       "      <td>1987</td>\n",
+       "      <td>0</td>\n",
+       "      <td>20</td>\n",
+       "      <td>14</td>\n",
+       "      <td>289700</td>\n",
+       "      <td>4.83</td>\n",
+       "      <td>Albania1987</td>\n",
+       "      <td>0.776601</td>\n",
+       "      <td>2156624900</td>\n",
+       "      <td>796</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Albania</td>\n",
+       "      <td>1987</td>\n",
+       "      <td>1</td>\n",
+       "      <td>80</td>\n",
+       "      <td>1</td>\n",
+       "      <td>21800</td>\n",
+       "      <td>4.59</td>\n",
+       "      <td>Albania1987</td>\n",
+       "      <td>0.776601</td>\n",
+       "      <td>2156624900</td>\n",
+       "      <td>796</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Albania</td>\n",
+       "      <td>1987</td>\n",
+       "      <td>1</td>\n",
+       "      <td>30</td>\n",
+       "      <td>9</td>\n",
+       "      <td>274300</td>\n",
+       "      <td>3.28</td>\n",
+       "      <td>Albania1987</td>\n",
+       "      <td>0.776601</td>\n",
+       "      <td>2156624900</td>\n",
+       "      <td>796</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27815</th>\n",
+       "      <td>Uzbekistan</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>0</td>\n",
+       "      <td>45</td>\n",
+       "      <td>107</td>\n",
+       "      <td>3620833</td>\n",
+       "      <td>2.96</td>\n",
+       "      <td>Uzbekistan2014</td>\n",
+       "      <td>0.675000</td>\n",
+       "      <td>63067077179</td>\n",
+       "      <td>2309</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27816</th>\n",
+       "      <td>Uzbekistan</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>0</td>\n",
+       "      <td>80</td>\n",
+       "      <td>9</td>\n",
+       "      <td>348465</td>\n",
+       "      <td>2.58</td>\n",
+       "      <td>Uzbekistan2014</td>\n",
+       "      <td>0.675000</td>\n",
+       "      <td>63067077179</td>\n",
+       "      <td>2309</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27817</th>\n",
+       "      <td>Uzbekistan</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>60</td>\n",
+       "      <td>2762158</td>\n",
+       "      <td>2.17</td>\n",
+       "      <td>Uzbekistan2014</td>\n",
+       "      <td>0.675000</td>\n",
+       "      <td>63067077179</td>\n",
+       "      <td>2309</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27818</th>\n",
+       "      <td>Uzbekistan</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>44</td>\n",
+       "      <td>2631600</td>\n",
+       "      <td>1.67</td>\n",
+       "      <td>Uzbekistan2014</td>\n",
+       "      <td>0.675000</td>\n",
+       "      <td>63067077179</td>\n",
+       "      <td>2309</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27819</th>\n",
+       "      <td>Uzbekistan</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>0</td>\n",
+       "      <td>65</td>\n",
+       "      <td>21</td>\n",
+       "      <td>1438935</td>\n",
+       "      <td>1.46</td>\n",
+       "      <td>Uzbekistan2014</td>\n",
+       "      <td>0.675000</td>\n",
+       "      <td>63067077179</td>\n",
+       "      <td>2309</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>27820 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          country  year  sex  age  suicides_no  population  suicides/100k pop  \\\n",
+       "0         Albania  1987    1   20           21      312900               6.71   \n",
+       "1         Albania  1987    1   45           16      308000               5.19   \n",
+       "2         Albania  1987    0   20           14      289700               4.83   \n",
+       "3         Albania  1987    1   80            1       21800               4.59   \n",
+       "4         Albania  1987    1   30            9      274300               3.28   \n",
+       "...           ...   ...  ...  ...          ...         ...                ...   \n",
+       "27815  Uzbekistan  2014    0   45          107     3620833               2.96   \n",
+       "27816  Uzbekistan  2014    0   80            9      348465               2.58   \n",
+       "27817  Uzbekistan  2014    1   10           60     2762158               2.17   \n",
+       "27818  Uzbekistan  2014    0   10           44     2631600               1.67   \n",
+       "27819  Uzbekistan  2014    0   65           21     1438935               1.46   \n",
+       "\n",
+       "         country-year  HDI for year  gdp_for_year ($)  gdp_per_capita ($)  \\\n",
+       "0         Albania1987      0.776601        2156624900                 796   \n",
+       "1         Albania1987      0.776601        2156624900                 796   \n",
+       "2         Albania1987      0.776601        2156624900                 796   \n",
+       "3         Albania1987      0.776601        2156624900                 796   \n",
+       "4         Albania1987      0.776601        2156624900                 796   \n",
+       "...               ...           ...               ...                 ...   \n",
+       "27815  Uzbekistan2014      0.675000       63067077179                2309   \n",
+       "27816  Uzbekistan2014      0.675000       63067077179                2309   \n",
+       "27817  Uzbekistan2014      0.675000       63067077179                2309   \n",
+       "27818  Uzbekistan2014      0.675000       63067077179                2309   \n",
+       "27819  Uzbekistan2014      0.675000       63067077179                2309   \n",
+       "\n",
+       "       generation  \n",
+       "0               4  \n",
+       "1               2  \n",
+       "2               4  \n",
+       "3               1  \n",
+       "4               3  \n",
+       "...           ...  \n",
+       "27815           4  \n",
+       "27816           2  \n",
+       "27817           6  \n",
+       "27818           6  \n",
+       "27819           3  \n",
+       "\n",
+       "[27820 rows x 12 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "\n",
+    "# Impute\n",
+    "hdi_mean = suicides['HDI for year'].mean()\n",
+    "suicides['HDI for year'] = suicides['HDI for year'].fillna(hdi_mean)\n",
     "\n",
     "# Adapted from Assignment 3 soln.\n",
     "# Discretize\n",
@@ -339,6 +594,8 @@
     "    return df\n",
     "\n",
     "suicides = discretize(suicides)\n",
+    "\n",
+    "display(suicides)\n",
     "\n",
     "# make a copy for data vis.\n",
     "suicides_org = suicides.copy()"
@@ -635,10 +892,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: RandomForestClassifier(class_weight='balanced', max_depth=10) Target Split: 1/4 Accuracy: 0.63 ±0.021\n",
-      "Model: RandomForestClassifier(class_weight='balanced', max_depth=10) Target Split: 1/2 Accuracy: 0.57 ±0.015\n",
-      "Model: RandomForestClassifier(class_weight='balanced', max_depth=10) Target Split: 2/3 Accuracy: 0.52 ±0.015\n",
-      "Model: RandomForestClassifier(class_weight='balanced', max_depth=10) Target Split: 3/4 Accuracy: 0.50 ±0.016\n",
+      "Model: RandomForestClassifier(class_weight='balanced', max_depth=10) Target Split: 1/4 Accuracy: 0.63 ±0.022\n",
+      "Model: RandomForestClassifier(class_weight='balanced', max_depth=10) Target Split: 1/2 Accuracy: 0.57 ±0.014\n",
+      "Model: RandomForestClassifier(class_weight='balanced', max_depth=10) Target Split: 2/3 Accuracy: 0.52 ±0.016\n",
+      "Model: RandomForestClassifier(class_weight='balanced', max_depth=10) Target Split: 3/4 Accuracy: 0.49 ±0.015\n",
       "Model: GaussianNB() Target Split: 1/4 Accuracy: 0.58 ±0.034\n",
       "Model: GaussianNB() Target Split: 1/2 Accuracy: 0.54 ±0.041\n",
       "Model: GaussianNB() Target Split: 2/3 Accuracy: 0.50 ±0.040\n",
@@ -680,7 +937,19 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'HDI_mean' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-5c6125e8ffbd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# The designated input\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdesignated1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2000\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m20\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mHDI_mean\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mdesignated2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2000\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m20\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# Drop HDI column from suicides\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'HDI_mean' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# The designated input\n",
     "designated1 = np.array([[2000, 1, 20, HDI_mean, 4]])\n",
@@ -716,17 +985,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "With HDI: High Rate\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Fit and predict\n",
     "d1_pred = fit_and_predict(X, designated1)\n",
@@ -734,6 +995,20 @@
     "# Show result\n",
     "print(f\"With HDI: {classify(d1_pred)}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -746,17 +1021,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Without HDI: High Rate\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Fit and predict\n",
     "d2_pred = fit_and_predict(X_no_hdi, designated2)\n",
@@ -776,24 +1043,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "W/ HDI 1/4 split: High Rate\n",
-      "W/o HDI 1/4 split: High Rate\n",
-      "W/ HDI 1/2 split: High Rate\n",
-      "W/o HDI 1/2 split: High Rate\n",
-      "W/ HDI 2/3 split: Low Rate\n",
-      "W/o HDI 2/3 split: Low Rate\n",
-      "W/ HDI 3/4 split: High Rate\n",
-      "W/o HDI 3/4 split: Low Rate\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Run through with all High/Low splits\n",
     "\n",
@@ -829,7 +1081,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
