--- a/McElhenney-Assign07.ipynb
+++ b/McElhenney-Assign07.ipynb
@@ -2152,7 +2152,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### How about without 'generation'\n",
+    "### How about without 'generation'\n",
     "\n",
     "Just for our edification how does the Linear Regressor fair without the generational data?"
    ]
